Fixed spacing on menus

--- a/src/sass/components/_nav-menu.scss
+++ b/src/sass/components/_nav-menu.scss
@@ -157,7 +157,7 @@
 
     &__list--child-menu {
       position: absolute;
-      top: $lg;
+      top: $xl;
       left: 0;
       width: 240px;
       margin: 0;
